@@ -133,7 +133,7 @@
 	</extension>
 </addon>
 
-<addon id="script.module.turtle" name="Turtle" version="1.3.3"
+<addon id="script.module.turtle" name="Turtle" version="1.3.4"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
@@ -163,7 +163,7 @@
 	</extension>
 </addon>
 
-<addon id="service.playit" name="PlayIt" version="0.1.4"
+<addon id="service.playit" name="PlayIt" version="0.1.5"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
