@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.turtle" name="Turtle" version="1.3.3"
+<addon id="script.module.turtle" name="Turtle" version="1.3.4"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
