@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.playit" name="PlayIt" version="0.1.4"
+<addon id="service.playit" name="PlayIt" version="0.1.5"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
