@@ -1,3 +1,6 @@
+[B]Version 0.1.5[/B]
+- Added new turtle lib dependency.
+
 [B]Version 0.1.1[/B]
 - YouTube video streaming fixed. Turtle module extracted.
 
